fix nav being too small on smaller screens

--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
 
 nav {
 	background-color: #4c4c4c;
-	height: 5vh;
+	height: 5%;
 	overflow: hidden;
+	position: sticky;
+	top: 0;
 }
 
 nav ul {
